--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Actividad1</string>
+    <string name="btn_siguiente">Siguiente</string>
+    <string name="op_1">Canciones</string>
+    <string name="op_2">Películas</string>
 </resources>
